# Steady-state-Non-Line-of-Sight-Imaging

./: CMakeLists.txt  download_mnist.py  rename_image.py
render-mnist/: model_normalized.mtl
render-mnist/src/: display_3_program.cpp  main.cpp  renderclass.h
